<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Login Panel -->

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="605dp"
        android:layout_height="495dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="589dp"
        android:layout_height="494dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/logoImageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello!"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Happy to see you again!"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="513dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_bar_background"
            android:hint="Enter Username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="513dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_bar_background"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="515dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/search_bar_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="514dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/search_bar_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Signup"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/guestButton"
            android:layout_width="514dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/search_bar_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Continue as a Guest"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Signup Panel -->

    <LinearLayout
        android:id="@+id/signupPanel"
        android:layout_width="589dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/logoImageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello!"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SignUp!"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="513dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_bar_background"
            android:hint="Enter Username"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/signup_displayName"
            android:layout_width="513dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_bar_background"
            android:hint="Enter Display Name"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/signup_pass"
            android:layout_width="513dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_bar_background"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/signup_passVerify"
            android:layout_width="513dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_bar_background"
            android:hint="Re-enter Password"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="515dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/search_bar_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/signup_login"
            android:layout_width="515dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/search_bar_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
