...
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.016"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/song_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recyler_view"
                android:layout_width="1141dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
...
