...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/play_pause_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="585dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="591dp"
        app:layout_constraintEnd_toEndOf="parent"
...
