...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/playlistName"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="109dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="Playlist #1"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/create_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
...
