...
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:defaultNavHost="true"
            app:navGraph="@navigation/mobile_navigation" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/drawer_nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/item_user_profile_header"
            app:menu="@menu/activity_main_drawer">
...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="Upload Tracks" />

                <Switch
                    android:id="@+id/dark_light_mode_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="Dark Mode"
                    android:textAlignment="viewStart"
...
